# expense-tracker-api

./: .env.template  create_superuser.py  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 2024_08_10_0042-174758f440f8_create_category_table.py  2024_08_11_1702-bf08c04d3f39_create_categories_table.py  2024_08_12_1822-d026ff6449b4_create_wallets_table.py  2024_08_15_1538-264e99d7d481_create_tables.py  2024_08_15_1844-8f09588da7c0_add_transaction_type_column.py  2024_08_17_2011-c489d28bea43_create_users_table.py  2024_08_18_1331-696a9362d9e8_create_access_tokens_table.py  2024_08_18_1403-595dd09200aa_add_column.py  2024_08_18_1604-3ad5a29cb9d0_add_relations.py  2024_08_19_1808-d50e6db88562_user_category_relation.py  2024_08_24_1954-74b69b715014_add_column_to_transactions.py  2024_08_24_2001-4c6f4918bba5_edit_columns_types.py
api/: __init__.py
api/api_v1/: __init__.py  auth.py  categories.py  expenses.py  export.py  fastapi_users_router.py  income.py  wallets.py
api/dependencies/: category.py  expense.py  pagination.py  transaction.py  wallet.py
api/dependencies/auth/: access_tokens.py  backend.py  strategy.py  user_manager.py  (+1 more)
core/: config.py
core/authentication/: __init__.py  transport.py  user_manager.py
core/models/: __init__.py  access_token.py  base.py  category.py  db_helper.py  transaction.py  user.py  wallet.py
core/schemas/: __init__.py  category.py  expense.py  pagination.py  transaction.py  wallet.py
crud/: category.py  expense.py  export.py  transaction.py  wallet.py
crud/validators/: __init__.py  category.py  wallet.py
(+4 files in other folders)
