[tool.poetry]
name = "expense tracker api"
version = "0.2.0"
description = "Expense Tracker API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
alembic = "^1.13.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
aiomysql = "^0.2.0"
uvicorn = {extras = ["standart"], version = "^0.30.5"}
cryptography = "^43.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
